basic dom manipulation completed

--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -43,7 +43,8 @@
         <hr>
 
         <!--Cards-->
-        <ul class="allRecipes"></ul>
-        <script src="app.js" async defer></script>
+        <ul id="recipeCards">
+        </ul>
+        <script src="app.js"></script>
     </body>
 </html>
