basic assignment complete, css remaining

--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -36,7 +36,7 @@
                 <textarea name="recipeMethod" id="recipeMethod" rows="5" cols="30"></textarea> <br>
 
                 <button type="submit" id="submitButton" onclick="submitRecipe();">Submit</button>
-                <button type="clear" id="clearButton" onclick="clearRecipe();">Clear</button>
+                <button type="reset" id="clearButton" >Clear</button>
                 <button type="delete" id="deleteButton" onclick="deleteAll();">Delete All</button>
             </form>
         </div>
