--- a/assignment1/about.html
+++ b/assignment1/about.html
@@ -3,12 +3,18 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>About</title>
+        <title>About Me</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles.css">
     </head>
+
     <body>
+        <!--Header-->
+        <div class="banner">
+            <h1>About Me</h1>
+        </div>
+
          <!--Navbar-->
          <div class="navbar">
             <ul>
@@ -17,10 +23,8 @@
               <li><a href="#instagram">Instagram</a></li>
             </ul>
         </div>
-        <hr>
 
-        <h1>About Me</h1>
-        <p>Lorem ipsum dolor sit amet,
+        <p class="aboutMe"> Lorem ipsum dolor sit amet,
         consectetur adipiscing elit, sed do eiusmod tempor 
         incididunt ut labore et dolore magna aliqua. Ut enim 
         ad minim veniam, quis nostrud exercitation ullamco 
