--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -1,50 +1,65 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Vancity Foodiee</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="styles.css">
-    </head>
 
-    <body>
-        <!--Header-->
-        <div class="title">
-            <h1>Vancity Foodiee</h1>
-        </div>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Vancity Foodiee</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--CSS-->
+    <link rel="stylesheet" href="styles.css">
+    <!--Font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
+</head>
 
-        <!--Navbar-->
-        <div class="navbar">
-            <ul>
-              <li><a href="#home">Home</a></li>
-              <li><a href="about.html">About</a></li>
-              <li><a href="#instagram">Instagram</a></li>
-            </ul>
-        </div>
-        <hr>
+<body>
+    <!--Header-->
+    <div class="banner">
+        <h1>Vancity Foodiee</h1>
+    </div>
 
-        <!--Form--NEEDS FLEX-->
-        <div>
-            <form class="formRecipeInput">
-                <label for="recipeTitle">Recipe Title:</label>
-                <input type="text" id="recipeTitle"> <br>
-                <label for="recipeIngredients">Ingredients:</label>
-                <textarea name="recipeIngredients" id="recipeIngredients" rows="5" cols="30"></textarea> <br>
-                <label for="recipeMethod">Method:</label>
-                <textarea name="recipeMethod" id="recipeMethod" rows="5" cols="30"></textarea> <br>
+    <!--Navbar-->
+    <div class="navbar">
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="#instagram">Instagram</a></li>
+        </ul>
+    </div>
+   
 
+    <!--Form-->
+    <div>
+        <form class="formRecipeInput">
+            <label for="recipeTitle">Recipe Title:</label>
+            <input type="text" id="recipeTitle" style="min-width: 247px;"> <br>
+            <label for="recipeTitle">Image URL</label>
+            <input type="text" id="url" style="min-width: 247px;"> <br>
+            <label for="recipeIngredients">Ingredients:</label>
+            <textarea name="recipeIngredients" id="recipeIngredients" rows="5" cols="30"></textarea> <br>
+            <label for="recipeMethod">Method:</label>
+            <textarea name="recipeMethod" id="recipeMethod" rows="5" cols="30"></textarea> <br>
+
+            <div class="buttons">
                 <button type="submit" id="submitButton" onclick="submitRecipe();">Submit</button>
-                <button type="reset" id="clearButton" >Clear</button>
+                <button type="reset" id="clearButton">Clear</button>
                 <button type="delete" id="deleteButton" onclick="deleteAll();">Delete All</button>
-            </form>
-        </div>
-        <hr>
+            </div>
+        </form>
+    </div>
+  
 
-        <!--Cards-->
+    <!--Cards-->
+    <div class="displayCards">
         <ul id="recipeCards">
         </ul>
-        <script src="app.js"></script>
-    </body>
+    </div>
+
+    <!--Script-->
+    <script src="app.js"></script>
+</body>
+
 </html>
