Added instagram link

--- a/assignment1/about.html
+++ b/assignment1/about.html
@@ -20,20 +20,11 @@
             <ul>
               <li><a href="index.html">Home</a></li>
               <li><a href="about.html">About</a></li>
-              <li><a href="#instagram">Instagram</a></li>
+              <li><a href="https://www.instagram.com/vancityfoodiee/">Instagram</a></li>
             </ul>
         </div>
 
-        <p class="aboutMe"> Lorem ipsum dolor sit amet,
-        consectetur adipiscing elit, sed do eiusmod tempor 
-        incididunt ut labore et dolore magna aliqua. Ut enim 
-        ad minim veniam, quis nostrud exercitation ullamco 
-        laboris nisi ut aliquip ex ea commodo consequat. 
-        Duis aute irure dolor in reprehenderit in voluptate 
-        velit esse cillum dolore eu fugiat nulla pariatur. 
-        Excepteur sint occaecat cupidatat non proident, 
-        sunt in culpa qui officia deserunt mollit anim id est 
-        laborum. </p>
+        <p class="aboutMe"> Now this looks like a job for me, So everybody just follow me cause we need a little controversy cause it feels so empty without me </p>
         
         <script src="" async defer></script>
     </body>
