--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -26,7 +26,7 @@
         <ul>
             <li><a href="#home">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="#instagram">Instagram</a></li>
+            <li><a href="https://www.instagram.com/vancityfoodiee/">Instagram</a></li>
         </ul>
     </div>
    
