--- a/assignment1/about.html
+++ b/assignment1/about.html
@@ -20,7 +20,7 @@
             <ul>
               <li><a href="index.html">Home</a></li>
               <li><a href="about.html">About</a></li>
-              <li><a href="https://www.instagram.com/vancityfoodiee/">Instagram</a></li>
+              <li><a href="https://www.instagram.com/vancityfoodiee/"  target=”_blank”>Instagram</a></li>
             </ul>
         </div>
 
