final commit for Assignment 1

--- a/assignment1/about.html
+++ b/assignment1/about.html
@@ -1,31 +1,46 @@
 <!DOCTYPE <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>About Me</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="styles.css">
-    </head>
 
-    <body>
-        <!--Header-->
-        <div class="banner">
-            <h1>About Me</h1>
-        </div>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>About Me</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--CSS-->
+    <link rel="stylesheet" href="styles.css">
+    <!--Icons-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!--Font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
+</head>
 
-         <!--Navbar-->
-         <div class="navbar">
-            <ul>
-              <li><a href="index.html">Home</a></li>
-              <li><a href="about.html">About</a></li>
-              <li><a href="https://www.instagram.com/vancityfoodiee/"  target=”_blank”>Instagram</a></li>
-            </ul>
-        </div>
+<body>
+    <!--Header-->
+    <div class="banner">
+        <h1>About Me</h1>
+    </div>
 
-        <p class="aboutMe"> Now this looks like a job for me, So everybody just follow me cause we need a little controversy cause it feels so empty without me </p>
-        
-        <script src="" async defer></script>
-    </body>
+    <!--Navbar-->
+    <div class="navbar">
+        <ul>
+            <li><a href="index.html"><i class="fa fa-fw fa-home"></i>Home</a></li>
+            <li><a class="active" href="about.html"><i class="fa fa-fw fa-user"></i>About</a></li>
+            <li><a href="https://www.instagram.com/vancityfoodiee/"  target=”_blank”>Instagram</a></li>
+        </ul>
+    </div>
+
+    <p class="aboutMe">Hi, I'm Anusha, a BCS student currently enrolled in CPSC 455. I'm excited to discover more about
+        web development through this course
+        and can't wait to see how my team project turns out. 
+        <br> <br>
+        Besides coding, I like to cook so this recipe project was right up my alley (albeit the noob css -.-).
+        Click on the Insta link to like and follow my actual cooking page!
+    </p>
+
+    <script src="" async defer></script>
+</body>
+
 </html>
